wrap playlists to avoid one long row of playlists

--- a/app/assets/stylesheets/inner_collection.scss
+++ b/app/assets/stylesheets/inner_collection.scss
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: row;
   margin: 35px 110px;
+  flex-wrap: wrap;
 }
 
 .square-item {
@@ -18,7 +19,7 @@
   flex-direction: column;
   text-align: center;
   justify-content: space-between;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   letter-spacing: 1px;
   img {
     padding: 10px;
